# deeplearning

./: pyproject.toml
notebooks/: ex1.ipynb  ex2.ipynb  ex3.ipynb  ex4.ipynb  ex5.ipynb
results/: resultados_titanic.xlsx  results.json
